[package]
name = "bracket-heat"
version = "0.1.0"
authors = ["Herbert Wolverson <herberticus@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = "0.4.7"
rocket_contrib = { version = "0.4.5", features = ["json"] }
rf-signal-algorithms = { path = "../rf-signal-algorithms/" }
serde = "1.0.117"
ron = "0.6.2"
