[package]
name = "rf-signal-algorithms"
version = "0.1.0"
authors = ["Herbert Wolverson <herberticus@gmail.com>"]
edition = "2018"
description = "Rust wrapper for https://github.com/Cloud-RF/Signal-Server signal algorithms."
readme = "README.md"
license = "GPL2"

[dependencies]
num-complex = "0.3.1"

[dev-dependencies]
float-cmp = "0.8"

[build-dependencies]
bindgen = "0.57.0"
cc = "1.0.66"
