[package]
name = "rf-signal-algorithms"
version = "0.1.0"
authors = ["Herbert Wolverson <herberticus@gmail.com>"]
edition = "2018"
description = "Rust wrapper for https://github.com/Cloud-RF/Signal-Server signal algorithms."
readme = "README.md"
license = "GPL2"
repository = "https://github.com/thebracket/rf-signals"
keywords = ["rf", "radio", "longley-rice"]
categories = [ "algorithms" ]
publish = true

[dependencies]
num-complex = "0.3.1"
geo = "0.17.0"

[dev-dependencies]
float-cmp = "0.8"

[build-dependencies]
bindgen = "0.57.0"
cc = "1.0.66"
